Applied final css touches (google fonts).

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,18 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bellefair&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bellefair&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-.login-sign-up{
-    font-family: 'Sedgwick Ave Display', cursive;
+.urban-street {
+    font-family: "Sedgwick Ave Display", cursive;
 }
 
-p, button {
-    font-family: 'Bellefair', serif;
+p,
+button {
+    font-family: "Bellefair", serif;
     font-size: 1.5rem;
 }
 
-.title-views{
-    font-family: 'Montserrat Subrayada', sans-serif;
+.title-views {
+    font-family: "Montserrat Subrayada", sans-serif;
+}
+
+.font-news {
+    font-family: "Fira Sans Condensed", sans-serif;
+}
+
+.nav-bar-style{
+    font-family: 'Righteous', cursive;
 }
